# pi-chat-api-speckit

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  PLAN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py
app/: config.py  database.py  deps.py  errors.py  logging.py  main.py  models.py  security.py  types.py
app/routers/: auth.py  chat.py  health.py
app/schemas/: auth.py  chat.py
app/services/: auth_service.py  chat_service.py  llm.py
docs/: architecture.md  ci.md  faq.md  local-dev.md  quickstart.md  scaffolding.md  testing.md
scripts/: seed.py  smoke.py
specs/001-llm-chat-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-llm-chat-api/checklists/: requirements.md
specs/001-llm-chat-api/contracts/: openapi.yaml
specs/002-docs-ci-hardening/: plan.md  spec.md  tasks.md
tests/: conftest.py  test_auth.py  test_chat.py  test_health.py  test_history.py  test_llm_provider.py  test_logging.py  test_models.py  test_user_journey.py
